# tracescan

./: .gitignore  CHANGELOG.md  Cargo.toml  HELPLINE.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  VALIDATION.md  build.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy.yml  update-iocs.yml
crates/trace-core/: Cargo.toml
crates/trace-core/examples/: ioc_stats.rs  scan.rs
crates/trace-core/src/: crash_log.rs  engine.rs  heuristics.rs  ioc.rs  lib.rs  ps.rs  report.rs  shutdown_log.rs  tar_stream.rs  unified_log.rs
crates/trace-core/tests/: bundled_iocs.rs  properties.proptest-regressions  properties.rs  real_capture.rs  report_fields_v3.json  report_v3.rs  report_v4.rs
deploy/: package-lock.json  package.json
docs/: design-unified-logs.md  report.schema.json
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: trace.spec.js
fixtures/: make_fixtures.sh
redirect/: index.html  sw.js
web/: _headers  index.html  indicator-floor.js  main.js  readable-report.js  report-validator.js  report.schema.json  style.css  sw.js  worker.js
web/iocs/: manifest.json
