[package]
name = "trace-core"
version = "0.7.5"
edition = "2021"
description = "Local-first iOS sysdiagnose spyware-trace scanner (WASM core)"
license = "MIT"
repository = "https://github.com/iAnonymous3000/tracescan"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
regex-lite = "0.1"
# Mandiant's unified-log parser; compiles to wasm32 unmodified. Used at
# catalog level only (process inventory) - no message rendering, no dsc.
macos-unifiedlogs = "0.6"
sha2 = { version = "0.11.0", default-features = false }

[dev-dependencies]
humantime = "2.4.0"
jsonschema = "0.47.0"
proptest = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.103"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
